--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '2'
 services:
+  mysql:
+    image: mysql
+    ports:
+      - '3306:3306'
+    environment:
+      - MYSQL_DATABASE=cata
+      - MYSQL_ROOT_PASSWORD=password
   zookeeper:
     image: confluentinc/cp-zookeeper:5.5.0
     hostname: zookeeper
