--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,31 @@ db {
   password = "password"
 }
 
+rabbit{
+  global{
+    username:"rabbitmq"
+    password: "rabbitmq"
+    host: "localhost"
+    virtual-host: "ukl"
+    port: 5672
+  }
+  ex-name:"ukl_exchange"
+  ex-etype:"direct"
+
+  list-players-queue {
+    name:"listPlayersQueue"
+    key:"list_players"
+  }
+  add-player-queue {
+    name:"addPlayerQueue"
+    key:"add_player"
+  }
+  errors-queue {
+    name:"errorsQueue"
+    key:"errors"
+  }
+}
+
 server {
   port = 8080
 }
