rabbit producer refactoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,7 +24,7 @@ rabbit{
     port: 5672
   }
   ex-name:"ukl_exchange"
-  ex-etype:"direct"
+  ex-type:"direct"
 
   list-players-queue {
     name:"listPlayersQueue"
