--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,29 +15,18 @@ db {
   password = "password"
 }
 
-rabbit{
-  global{
-    username:"rabbitmq"
+rabbit {
+  global {
+    username: "rabbitmq"
     password: "rabbitmq"
     host: "localhost"
     virtual-host: "ukl"
     port: 5672
   }
-  ex-name:"ukl_exchange"
-  ex-type:"direct"
-
-  list-players-queue {
-    name:"listPlayersQueue"
-    key:"list_players"
-  }
-  add-player-queue {
-    name:"addPlayerQueue"
-    key:"add_player"
-  }
-  errors-queue {
-    name:"errorsQueue"
-    key:"errors"
-  }
+  input-channel: "fromBot"
+  output-channel: "toBot"
+  binary-channel: "binaryToBot"
+  error-channel: "errorToBot"
 }
 
 server {
