rabbit integration with test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,10 +23,10 @@ rabbit {
     virtual-host: "ukl"
     port: 5672
   }
-  input-channel: "fromBot"
-  output-channel: "toBot"
-  binary-channel: "binaryToBot"
-  error-channel: "errorToBot"
+  input-channel: "input_q"
+  output-channel: "output_q"
+  binary-channel: "binary_q"
+  error-channel: "error_q"
 }
 
 server {
