--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,8 @@ app {
   win-shutout-points = 50
   lose-points = -25
   lose-shutout-points = -50
+  archive-receiver = "маюн"
+  notifications-enabled = false
 }
 
 db {
