season service prototype zio

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,7 @@ db {
   database = "cata"
   username = "root"
   password = "password"
+  uri = "mongodb://root:password@localhost:27017/cata"
 }
 
 rabbit {
