--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,35 +1,27 @@
 app {
   top-players-limit = 5
-  min-games = 30
   win-points = 25
   win-shutout-points = 50
   lose-points = -25
   lose-shutout-points = -50
   archive-receiver = "маюн"
   notifications-enabled = false
-}
+  expected-games = 20
+  report-timezone = "Europe/Kiev"
+  privileged = "testId"
+  mongo-url = "mongodb://root:password@localhost:27017/cata"
 
-db {
-  host = "localhost"
-  port = 3306
-  database = "cata"
-  username = "root"
-  password = "password"
-  uri = "mongodb://root:password@localhost:27017/cata"
 }
 
 rabbit {
-  global {
-    username: "rabbitmq"
-    password: "rabbitmq"
-    host: "localhost"
-    virtual-host: "ukl"
-    port: 5672
-  }
-  input-channel: "input_q"
-  output-channel: "output_q"
-  binary-channel: "binary_q"
-  error-channel: "error_q"
+  username: "rabbitmq"
+  password: "rabbitmq"
+  host: "localhost"
+  virtual-host: "ukl"
+  port: 5672
+  input-queue: "input_q"
+  output-queue: "output_q"
+  binary-queue: "binary_q"
 }
 
 server {
